# patent_parse

./: .gitignore  Claude.md  pyproject.toml
.github/workflows/: test.yml
patent_parse/: Claude.md  README.md  pyproject.toml  settings.json
patent_parse/scripts/: evaluate_holdout.py  trim_pdf.py
patent_parse/src/patent_parse/: __init__.py  parser.py
patent_parse/tests/: test_parser.py
patent_test/: README.md  claude.md  pyproject.toml  truncate_pdf.py
patent_test/.claude/: settings.local.json
patent_test/src/patent_test/: __init__.py  evaluator.py  tests.yml
patent_test/src/patent_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
patent_test/src/patent_test/assets/: US10660930.txt
patent_test/tests/: test_evaluator.py
src/patent_parse/: parser.py
tests/: test_parser.py
