[project]
name = "patent-parse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Doug Turnbull", email = "softwaredoug@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.26.7",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
